<resources>
    <string name="app_name">贰货</string>
    <string name="title_homepage">主页</string>
    <string name="title_search">搜索</string>
    <string name="title_me">我</string>
    <string name="com_image">COM_IMAGE</string>
    <string name="see">查看详情</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="user_image">USER_IMAGE</string>
    <string name="buy_now">立即购买</string>
    <string name="sellers">查看卖家</string>
    <string name="fav">收藏</string>
    <string name="login">Login</string>
    <string name="username">用\u0020\u0020户\u0020\u0020名</string>
    <string name="passwd">密\u3000\u3000码</string>
    <string name="denglu">登录</string>
    <string name="register">注册</string>
    <string name="notice">通知管理</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
    <string name="record">交易记录管理</string>
    <string name="favor">收藏夹</string>
    <string name="edimg">编辑头像</string>
    <string name="txnickname">昵\u3000\u3000称</string>
    <string name="txusername">用\u0020\u0020户\u0020\u0020名</string>
    <string name="txphone">手\u0020\u0020机\u0020\u0020号</string>
    <string name="txpassword1">密\u3000\u3000码</string>
    <string name="txpassword2">确认密码</string>
    <string name="txsex">性\u3000\u3000别</string>sex
    <string name="txsex1">男</string>
    <string name="txsex2">女</string>
    <string name="txschool">学\u3000\u3000校</string>
    <string name="txstudentid">学\u3000\u3000号</string>
    <string name="txsubmit">提交</string>
    <string name="txcancel">取消</string>

</resources>
