<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lluser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_user"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:inputType="text"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="normal">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/passwd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_pwd"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/denglu" />

            <Button
                android:id="@+id/btnreg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/register" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>